# turnmux

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
src/turnmux/: __init__.py  attachments.py  audio_transcription.py  config.py  doctor.py  input_types.py  log_setup.py  main.py  service_manager.py
src/turnmux/app/: __init__.py  service.py
src/turnmux/providers/: __init__.py  base.py  claude.py  claude_session_hook.py  codex.py  opencode.py  trust.py
src/turnmux/runtime/: __init__.py  approvals.py  binaries.py  home.py  lifecycle.py  tmux.py
src/turnmux/state/: __init__.py  db.py  models.py  repository.py
src/turnmux/transport/: __init__.py  telegram_bot.py
tests/: test_approvals.py  test_audio_transcription.py  test_binaries.py  test_claude_session_hook.py  test_config.py  test_db.py  test_doctor.py  test_lifecycle.py  test_log_setup.py  test_main.py  test_paths.py  test_providers.py  test_repository.py  test_service.py  test_service_manager.py  test_setup.py  test_telegram_bot.py  test_telegram_replay.py  test_tmux_runtime.py  test_trust.py
