[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "turnmux"
version = "0.1.0"
description = "Telegram-controlled tmux session router for terminal-native coding agents."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = ["telegram", "tmux", "terminal", "claude", "codex", "opencode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "httpx>=0.27,<1",
    "python-telegram-bot>=22,<23",
]

[project.scripts]
turnmux = "turnmux.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
